# videotransform

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  bmp.cpp  bmp.h  config.cpp  config.h  main.cpp
example/cfg/: example.cfg
include/: videotransform.h
scripts/: FindFFmpeg.cmake
src/: CMakeLists.txt  consts.hpp  debuglog.hpp  ring_buffer.h  scopeguard.hpp  videotransform_service_impl.cpp  videotransform_service_impl.h
test/: CMakeLists.txt  pass_and_fail_test.cpp
